Modifier le fichier index.html

--- a/index.html
+++ b/index.html
@@ -125,40 +125,62 @@
     <body>
         <h1>Responsive Layout</h1>
         <div class="row" >
-            <div class="col-lg-3 col-md-6"><p>Pour le Pays, pour les Ancêtres  Marchons unis, marchons unis 
-                Dans nos rangs point de traîtres  Du sol soyons seuls maîtres 
-                Marchons unis, marchons unis  Pour le Pays, pour les Ancêtres 
-                Marchons, marchons, marchons unis  Pour le Pays, pour les 
-                Ancêtres</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour les Aïeux, pour la Patrie  Béchons joyeux, béchons joyeux 
-                Quand le champ fructifie  L'âme se fortifie  Béchons joyeux, 
-                béchons joyeux  Pour les Aïeux, pour la Patrie  Béchons, béchons, 
-                béchons joyeux  Pour les Aïeux, pour la Patrie</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour le Pays et pour nos Pères  Formons des Fils, formons des Fils 
-                Libres, forts et prospères  Toujours nous serons frères  Formons 
-                des Fils, formons des Fils  Pour le Pays et pour nos Pères 
-                Formons, formons, formons des Fils  Pour le Pays et pour nos 
-                Pères</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour les Aïeux, pour la Patrie  O Dieu des Preux, O Dieu des Preux 
-                Sous ta garde infinie  Prends nos droits, notre vie  O Dieu des 
-                Preux, O Dieu des Preux  Pour les Aïeux, pour la Patrie  O Dieu, O 
-                Dieu, O Dieu des Preux  Pour les Aïeux, pour la Patrie </p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour le Drapeau, pour la Patrie  Mourir est beau, mourir est beau 
-                Notre passé nous crie:  Ayez l'âme aguerrie  Mourir est beau, 
-                mourir est beau  Pour le Drapeau, pour la Patrie  Mourir, mourir, 
-                mourir est beau  Pour le Drapeau, pour la Patrie</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour le Drapeau, pour la Patrie  Mourir est beau, mourir est beau 
-                Notre passé nous crie:  Ayez l'âme aguerrie  Mourir est beau, 
-                mourir est beau  Pour le Drapeau, pour la Patrie  Mourir, mourir, 
-                mourir est beau  Pour le Drapeau, pour la Patrie</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour le Drapeau, pour la Patrie  Mourir est beau, mourir est beau 
-                Notre passé nous crie:  Ayez l'âme aguerrie  Mourir est beau, 
-                mourir est beau  Pour le Drapeau, pour la Patrie  Mourir, mourir, 
-                mourir est beau  Pour le Drapeau, pour la Patrie</p></div>
-            <div class="col-lg-3 col-md-6"><p>Pour le Drapeau, pour la Patrie  Mourir est beau, mourir est beau 
-                Notre passé nous crie:  Ayez l'âme aguerrie  Mourir est beau, 
-                mourir est beau  Pour le Drapeau, pour la Patrie  Mourir, mourir, 
-                mourir est beau  Pour le Drapeau, pour la Patrie</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pour le Pays, pour les Ancêtres
+                Marchons unis, marchons unis
+                Dans nos rangs point de traîtres
+                Du sol soyons seuls maîtres
+                Marchons unis, marchons unis
+                Pour le Pays, pour les Ancêtres
+                Marchons, marchons, marchons unis
+                Pour le Pays, pour les Ancêtres</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pour le Pays et pour nos Pères
+                Formons des Fils, formons des Fils
+                Libres, forts et prospères
+                Toujours nous serons frères
+                Formons des Fils, formons des Fils
+                Pour le Pays et pour nos Pères
+                Formons, formons, formons des Fils
+                Pour le Pays et pour nos Pères</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pour les Aïeux, pour la Patrie
+                O Dieu des Preux, O Dieu des Preux
+                Sous ta garde infinie
+                Prends nos droits, notre vie
+                O Dieu des Preux, O Dieu des Preux
+                Pour les Aïeux, pour la Patrie
+                O Dieu, O Dieu, O Dieu des Preux
+                Pour les Aïeux, pour la Patrie</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pour le Drapeau, pour la Patrie
+                Mourir est beau, mourir est beau
+                Notre passé nous crie:
+                Ayez l'âme aguerrie
+                Mourir est beau, mourir est beau
+                Pour le Drapeau, pour la Patrie
+                Mourir, mourir, mourir est beau
+                Pour le Drapeau, pour la Patrie</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pou Ayiti peyi Zansèt yo
+                Se pou n mache men nan lamen
+                Nan mitan n pa fèt pou gen trèt
+                Nou fèt pou n sèl mèt tèt nou
+                An nou mache men nan lamen
+                Pou Ayiti ka vin pi bèl
+                An nou, an nou, met tèt ansanm
+                Pou Ayiti onon tout Zansèt yo.</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pou Ayiti onon Zansèt yo
+                Se pou n sekle se pou n plante
+                Se nan tè tout fòs nou chita
+                Se li k ba nou manje
+                Ann bite tè, ann voye wou
+                Ak kè kontan, fòk tè a bay.
+                Sekle, wouze, fanm kou gason
+                Pou n rive viv ak sèl fòs ponyèt nou.</p></div>
+            <div class="col-lg-3 col-md-6"><p>Pou Ayiti ak pou Zansèt yo
+                Fò nou kapab vanyan gason
+                Moun pa fèt pou ret avèk moun
+                Se sa k fè tout Manman ak tout Papa
+                Dwe pou voye Timoun lekòl
+                Pou yo aprann, pou yo konnen
+                Sa Tousen, Desalin, Kristòf, Petyon
+                Te fè pou wet Ayisyen anba bòt blan.</p></div>
         </div>
        
     </body>
